# gds

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
benchmark/: CMakeLists.txt  benchmark_main.cpp
include/: application_info.hpp  config.hpp  fluid.hpp  log.hpp  matrix.hpp  monitor.hpp  reaction_manager.hpp  reactive_parser.hpp  solver.hpp  utils.hpp
parallel/: CMakeLists.txt
parallel/src/: main.cu
src/: backward.cpp  fluid.cpp  log.cpp  main.cpp  monitor.cpp  reaction_manager.cpp  reactive_parser.cpp  solver.cpp  utils.cpp
tests/: CMakeLists.txt  backward.cpp  test_log.cpp  test_monitor.cpp  test_reaction_manager.cpp  test_solver_possion.cpp  test_utils.cpp
